force-app/main/default/objects/CTRCDDNACCMaster__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description﻿</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JudgmentDate__c</fullName>
        <label>Judgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Judgment__c</fullName>
        <label>Judgment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url﻿</label>
        <type>Url</type>
    </fields>
    <label>CTR CDD NACC Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NACC-{000}</displayFormat>
        <label>CTRCDDNACCMaster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>